Fixes errors identified through static analysis.
Refs #96440